# genai-skillls-workshop

./: README.md  challenge-1.ipynb  challenge-2.ipynb  challenge-3.ipynb  package-lock.json
challenge-5/: .dockerignore  .gitignore  Dockerfile  GEMINI.md  README.md  generate_diagram.py  pyproject.toml  requirements.txt  ruff.toml
challenge-5/alaska-dept-of-snow/: alaska-dept-of-snow-faqs.csv  faq-01.txt  faq-02.txt  faq-03.txt  faq-04.txt  faq-05.txt  faq-06.txt  faq-07.txt  faq-08.txt  faq-09.txt  faq-10.txt  faq-11.txt  faq-12.txt  faq-13.txt  faq-14.txt  faq-15.txt  faq-16.txt  faq-17.txt  faq-18.txt  faq-19.txt  faq-20.txt  faq-21.txt  faq-22.txt  faq-23.txt  faq-24.txt  faq-25.txt  faq-26.txt  faq-27.txt  faq-28.txt  faq-29.txt  faq-30.txt  faq-31.txt  faq-32.txt  faq-33.txt  faq-34.txt  faq-35.txt  faq-36.txt  faq-37.txt  faq-38.txt  faq-39.txt  (+11 more)
challenge-5/scripts/: README_EVALUATION.md  evaluate_model.py  load_faqs_to_bigquery.py  setup_bigquery.py
challenge-5/src/: app.py  chatbot.py  weather_service.py
challenge-5/src/templates/: index.html
challenge-5/tests/: README.md  __init__.py  test_chatbot.py
