[project]
name = "challenge-5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "google-cloud-bigquery>=3.38.0",
    "gunicorn>=23.0.0",
    "langchain>=1.1.2",
    "langchain-google-vertexai>=3.1.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
